--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<div class="container">
+			<div class="row">
+				<p id="time"></p>
+			</div>
+		</div>
 
 
 
