--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<div class="container">
-			<div class="row">
-				<p id="time"></p>
-			</div>
+		<div class="container my-5">
+			<div class="row col-12 justify-content-center my-5">
+				<h2 class="text-info">CURRENT TIME</h2>
+	  	</div>
+		  <div class="row col-12 justify-content-center">
+		  	<p id="time"></p>
+		  </div>
 		</div>
 
 
